<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/textura6"
    android:onClick="Comprar" >
    
    <LinearLayout
        android:layout_width="239dp"
        android:layout_height="592dp"
        android:layout_marginBottom="200dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stocktitu" />

        <TextView
            android:id="@+id/txtStock1Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stock1" />

        <TextView
            android:id="@+id/txtSN1Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/txtStock2Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stock2" />

        <TextView
            android:id="@+id/txtSN2Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/txtStock3Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stock3" />

        <TextView
            android:id="@+id/txtSN3Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/txtStock4Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stock4" />

        <TextView
            android:id="@+id/txtSN4Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/separador"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtSaldoId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saldoini" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/separador"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/lblSaludo"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="34dp"
            android:layout_weight="1"
            android:text="@string/lblsalu2" />

        <Button
            android:id="@+id/btnVerProductosId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="pasarOtraActividad"
            android:text="@string/verproductos" />

        <EditText
            android:id="@+id/edtProductoId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/separador"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtModificarId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modificarprecio" />

        <EditText
            android:id="@+id/editModificarPrecioId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/separador"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtproductoseleccionar" />

        <EditText
            android:id="@+id/editCompletarId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:text="@string/txtingresarproducto" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/btnMostrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:onClick="mostrar"
            android:text="@string/btnMostrar" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/separador"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtPrecioId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preciosolo" />

        <TextView
            android:id="@+id/txtDiezsoloId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:text="@string/lbl10doloid" />

        <TextView
            android:id="@+id/txtDiezId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="@string/txt10id" />

        <TextView
            android:id="@+id/txtVeintesoloId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:text="@string/lbl21soloid" />

        <TextView
            android:id="@+id/txtVeinteId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/txt21id" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/separador"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Comprar"
            android:text="@string/Comprar" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Vender"
            android:text="@string/Vender" />

    </LinearLayout>

</ScrollView>